// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 939.9272667157608,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 939.9272667157608,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": -101.9614554922677,
    },
    "isLeaf": false,
    "length": 516.9599966936684,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": 156.51854285456645,
    },
    "path": "/root/src",
    "visible": true,
    "width": 328.9745433505162,
    "x0": 319.57527068335867,
    "y0": 18.798545334315214,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 215.2802587417188,
      "y": 6,
      "z": -132.0597875554755,
    },
    "isLeaf": false,
    "length": 345.9552002330654,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 215.2802587417188,
      "y": 6,
      "z": 40.91781256105719,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 275.4734930478372,
    "x0": 327.5435122178002,
    "y0": 31.451412386258145,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 146.4118854797595,
      "y": 6,
      "z": 206.58257732365357,
    },
    "isLeaf": false,
    "length": 133.04619530477413,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 284.14863200367813,
      "y": 6,
      "z": 206.58257732365357,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 275.4734930478372,
    "x0": 327.5435122178002,
    "y0": 390.0594796712665,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 143.37636489521034,
      "y": 506,
      "z": -128.89657079248977,
    },
    "isLeaf": true,
    "length": 153.9982995386183,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 259.10558718114737,
      "y": 506,
      "z": -128.89657079248977,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 231.4584445718741,
    "x0": 335.5117537522418,
    "y0": 44.104279438201075,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 143.37636489521034,
      "y": 506,
      "z": 37.75459579807148,
    },
    "isLeaf": true,
    "length": 153.9982995386183,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 259.10558718114737,
      "y": 506,
      "z": 37.75459579807148,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 231.4584445718741,
    "x0": 335.5117537522418,
    "y0": 210.75544602876232,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 143.37636489521034,
      "y": 506,
      "z": 206.5825773236536,
    },
    "isLeaf": true,
    "length": 107.74046120088826,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 259.10558718114737,
      "y": 506,
      "z": 206.5825773236536,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 231.4584445718741,
    "x0": 335.5117537522418,
    "y0": 402.71234672320946,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 55.47636168262221,
      "y": 4,
      "z": 454.94545003682055,
    },
    "isLeaf": false,
    "length": 281.9781800147283,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 290.4581783615624,
      "y": 4,
      "z": 454.94545003682055,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 469.9636333578803,
    "x0": 187.98545334315213,
    "y0": 563.9563600294564,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -29.117092321796235,
      "y": 6,
      "z": 347.7937416312238,
    },
    "isLeaf": false,
    "length": 56.39563600294571,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 17.879271013991797,
      "y": 6,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 93.99272667157607,
    "x0": 197.38472601030975,
    "y0": 569.5959236297509,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -28.535694012487525,
      "y": 506,
      "z": 347.7937416312238,
    },
    "isLeaf": true,
    "length": 50.78529293944018,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 10.32109299297845,
      "y": 506,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 77.71357401093195,
    "x0": 202.0359124847795,
    "y0": 572.4010951615037,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238.76217869219556,
      "y": 6,
      "z": 528.2597768406499,
    },
    "isLeaf": false,
    "length": 135.34952640706956,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 351.5534506980868,
      "y": 6,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 225.58254401178255,
    "x0": 432.3665426892499,
    "y0": 710.5850136371151,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 212.46355890971813,
      "y": 506,
      "z": 478.08513550214184,
    },
    "isLeaf": true,
    "length": 45.59944607967748,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 212.46355890971813,
      "y": 506,
      "z": 500.88485854198063,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 442.4955998572252,
    "y0": 716.6852739822225,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 262.5285341826792,
      "y": 506,
      "z": 478.08513550214184,
    },
    "isLeaf": true,
    "length": 45.59944607967748,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 262.5285341826792,
      "y": 506,
      "z": 500.88485854198063,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 492.5605751301863,
    "y0": 716.6852739822225,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 312.5935094556403,
      "y": 506,
      "z": 478.08513550214184,
    },
    "isLeaf": true,
    "length": 45.59944607967748,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 312.5935094556403,
      "y": 506,
      "z": 500.88485854198063,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 542.6255504031474,
    "y0": 716.6852739822225,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 362.6584847286015,
      "y": 506,
      "z": 478.08513550214184,
    },
    "isLeaf": true,
    "length": 45.59944607967748,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 362.6584847286015,
      "y": 506,
      "z": 500.88485854198063,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 592.6905256761086,
    "y0": 716.6852739822225,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 214.99582320171194,
      "y": 506,
      "z": 528.2597768406499,
    },
    "isLeaf": true,
    "length": 19.749592867285173,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 259.9962698906854,
      "y": 506,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 90.00089337794691,
    "x0": 442.4955998572252,
    "y0": 768.3849804070073,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 214.99582320171194,
      "y": 506,
      "z": 554.1096300530423,
    },
    "isLeaf": true,
    "length": 19.749592867285173,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 259.9962698906854,
      "y": 506,
      "z": 554.1096300530423,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 90.00089337794691,
    "x0": 442.4955998572252,
    "y0": 794.2348336193998,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 214.99582320171194,
      "y": 506,
      "z": 579.9594832654348,
    },
    "isLeaf": true,
    "length": 19.74959286728506,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 259.9962698906854,
      "y": 506,
      "z": 579.9594832654348,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 90.00089337794691,
    "x0": 442.4955998572252,
    "y0": 820.0846868317923,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 312.5935094556403,
      "y": 506,
      "z": 529.7848419269267,
    },
    "isLeaf": true,
    "length": 45.59944607967759,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 312.5935094556403,
      "y": 506,
      "z": 552.5845649667656,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 542.6255504031474,
    "y0": 768.3849804070073,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 362.6584847286015,
      "y": 506,
      "z": 529.7848419269267,
    },
    "isLeaf": true,
    "length": 45.59944607967759,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 362.6584847286015,
      "y": 506,
      "z": 552.5845649667656,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 39.93591810498583,
    "x0": 592.6905256761086,
    "y0": 768.3849804070073,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 315.1257737476341,
      "y": 506,
      "z": 579.9594832654348,
    },
    "isLeaf": true,
    "length": 19.749592867285173,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 360.12622043660764,
      "y": 506,
      "z": 579.9594832654348,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 90.00089337794702,
    "x0": 542.6255504031474,
    "y0": 820.0846868317922,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 771.5290039756343,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 771.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": -57.117749006091444,
    },
    "isLeaf": false,
    "length": 462.9174023853805,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": 174.34095218659883,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 308.6116015902537,
    "x0": 77.15290039756343,
    "y0": 77.15290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -80.26361912536046,
      "y": 6,
      "z": -10.826008767553404,
    },
    "isLeaf": false,
    "length": 231.45870119269023,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 43.18102151074103,
      "y": 6,
      "z": -10.826008767553404,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 246.889281272203,
    "x0": 108.0140605565888,
    "y0": 123.44464063610148,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -27.59222968897906,
      "y": 506,
      "z": -63.004902255465396,
    },
    "isLeaf": true,
    "length": 208.71557395164803,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -27.59222968897906,
      "y": 506,
      "z": 41.35288472035862,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 204.65160382441266,
    "x0": 120.08196839881461,
    "y0": 134.8162042566226,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 162.7680171269643,
    },
    "isLeaf": false,
    "length": 46.29174023853807,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 185.91388724623334,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 30.861160159025417,
    "x0": 324.04218166976636,
    "y0": 401.1950820673298,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 88.32975581746331,
      "y": 506,
      "z": 163.91574622378755,
    },
    "isLeaf": true,
    "length": 41.700823851244934,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 88.32975581746331,
      "y": 506,
      "z": 184.76615814941005,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 25.527132477218515,
    "x0": 325.56618957885405,
    "y0": 403.49054026097633,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -76.40597410548229,
      "y": 4,
      "z": 405.7996533792891,
    },
    "isLeaf": false,
    "length": 77.15290039756337,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 116.4762768884263,
      "y": 4,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 385.76450198781714,
    "x0": 77.15290039756343,
    "y0": 617.2232031805074,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -155.75626723588772,
      "y": 502,
      "z": 405.7996533792891,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -155.75626723588772,
      "y": 502,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": 94.24373276411228,
    "y0": 655.7996533792891,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -250,
      "y": 500,
      "z": -250,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -250,
      "y": 500,
      "z": -250,
    },
    "path": "/root",
    "visible": true,
    "width": 0,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 12,
      "y": 2,
      "z": 270.5,
    },
    "isLeaf": false,
    "length": 1041,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 536,
      "y": 2,
      "z": 270.5,
    },
    "path": "/root",
    "visible": true,
    "width": 1048,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238,
      "y": 4,
      "z": 34.25,
    },
    "isLeaf": true,
    "length": 945,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 238,
      "y": 4,
      "z": 506.75,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 880,
    "x0": 48,
    "y0": 48,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 18,
      "y": 502,
      "z": 767,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 458,
      "y": 502,
      "z": 767,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 880,
    "x0": 48,
    "y0": 1017,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -1,
      "y": 2,
      "z": 243,
    },
    "isLeaf": false,
    "length": 986,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 497,
      "y": 2,
      "z": 243,
    },
    "path": "/root",
    "visible": true,
    "width": 996,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -15.5,
      "y": 4,
      "z": 12,
    },
    "isLeaf": true,
    "length": 924,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -15.5,
      "y": 4,
      "z": 474,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 407,
    "x0": 31,
    "y0": 31,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 422.5,
      "y": 4,
      "z": 12,
    },
    "isLeaf": false,
    "length": 924,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 422.5,
      "y": 4,
      "z": 474,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 407,
    "x0": 469,
    "y0": 31,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 320.25,
      "y": 6,
      "z": -69.56722608024691,
    },
    "isLeaf": true,
    "length": 236.86554783950618,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 460.75,
      "y": 6,
      "z": -69.56722608024691,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 281,
    "x0": 500,
    "y0": 62,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 390.5,
      "y": 6,
      "z": 228.39916087962962,
    },
    "isLeaf": true,
    "length": 594.1344521604938,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 390.5,
      "y": 6,
      "z": 525.4663869598764,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 281,
    "x0": 500,
    "y0": 329.8655478395062,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 320.25,
      "y": 504,
      "z": 689.5,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 460.75,
      "y": 504,
      "z": 689.5,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 281,
    "x0": 500,
    "y0": 939.5,
    "z0": 4,
  },
]
`;
